<?xml version="1.0" encoding="utf-8"?>

<!-- Layout for selecting a topping -->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ToppingFragment">

    <!--    data untuk data binding-->
    <data>
        <variable
            name="viewModel"
            type="com.example.cupcake.model.OrderViewModel" />
        <variable
            name="toppingFragment"
            type="com.example.cupcake.ToppingFragment" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/side_margin">

            <RadioGroup
                android:id="@+id/topping_options"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <RadioButton
                    android:id="@+id/fruits"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fruits"
                    android:checked="@{viewModel.topping.equals(@string/fruits)}"
                    android:onClick="@{() -> viewModel.setTopping(@string/fruits)}"/>

                <RadioButton
                    android:id="@+id/sweet_corn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sweet_corn"
                    android:checked="@{viewModel.topping.equals(@string/sweet_corn)}"
                    android:onClick="@{() -> viewModel.setTopping(@string/sweet_corn)}"/>

                <RadioButton
                    android:id="@+id/popcorn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/popcorn"
                    android:checked="@{viewModel.topping.equals(@string/popcorn)}"
                    android:onClick="@{() -> viewModel.setTopping(@string/popcorn)}"/>

                <RadioButton
                    android:id="@+id/powdered_sugar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/powdered_sugar"
                    android:checked="@{viewModel.topping.equals(@string/powdered_sugar)}"
                    android:onClick="@{() -> viewModel.setTopping(@string/powdered_sugar)}"/>

                <RadioButton
                    android:id="@+id/toasted_nuts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/toasted_nuts"
                    android:checked="@{viewModel.topping.equals(@string/toasted_nuts)}"
                    android:onClick="@{() -> viewModel.setTopping(@string/toasted_nuts)}"/>

                <RadioButton
                    android:id="@+id/marshmallows"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/marshmallows"
                    android:checked="@{viewModel.topping.equals(@string/marshmallows)}"
                    android:onClick="@{() -> viewModel.setTopping(@string/marshmallows)}"/>

                <RadioButton
                    android:id="@+id/candy_sprinkles"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/candy_sprinkles"
                    android:checked="@{viewModel.topping.equals(@string/candy_sprinkles)}"
                    android:onClick="@{() -> viewModel.setTopping(@string/candy_sprinkles)}"/>

                <RadioButton
                    android:id="@+id/shredded_coconut"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/shredded_coconut"
                    android:checked="@{viewModel.topping.equals(@string/shredded_coconut)}"
                    android:onClick="@{() -> viewModel.setTopping(@string/shredded_coconut)}"/>
            </RadioGroup>

            <View
                android:id="@+id/divider"
                style="@style/Widget.Cupcake.Divider"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/side_margin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/topping_options" />

            <TextView
                android:id="@+id/subtotal"
                android:text="@{@string/subtotal_price(viewModel.price)}"
                style="@style/Widget.Cupcake.TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/side_margin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/divider"
                tools:text="Subtotal $5.00" />

            <!--Button next untuk melanjutkan ke halaman berikutnya (date)-->
            <Button
                android:id="@+id/next_button"
                android:onClick="@{() -> toppingFragment.goToNextScreen()}"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/side_margin"
                android:text="@string/next"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/subtotal" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>